issue-9: Added missing CLI maven modular project Fixed links to samples